rnsc/test_data/integration/error/parser/instructions/recovery_multiple_errors.rns
.class RecoveryMultipleErrors
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc "first error"
    ldc 42
    ldc "second error"
    return
  .code_end
.method_end
.class_end
